updates to grid

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ The company has expanded over the years with the help of a great team. What star
 <h2>Interested in More?</h2>
 <p> We distill and create each and every Duke's jar at our Hazzard County distillery. We have a variety of flavors available to purchase in many stores. We often sell seasonal flavors, so keep an eye out!</p>
 
-<div class="row">
+<!-- <div class="row">
 
 <ul>
   <div class="column jars">
@@ -115,7 +115,62 @@ The company has expanded over the years with the help of a great team. What star
     <li><span class="sweet-tea"><img src="images/sweet tea.png">Sweet Tea</li>
   </div>
 </ul>
-</div>
+</div> -->
+
+
+<div class="small-grid">
+
+  <div class="small-col">
+
+       <img src="images/apple.png">
+
+       <p>Apple</p>
+
+       <img src="images/jar bullet.png">
+
+       <p>White Lightning</p>
+
+       <img src="images/lemon.png">
+
+       <p>Lemon Drop</p>
+
+       <img src="images/watermelon.png">
+
+      <p>Watermelon</p>
+
+       <img src="images/coffee.png">
+
+      <p>Coffee</p>
+
+    </div> <!--small-col-->
+
+
+
+    <div class="small-col">
+
+      <img src="images/jar bullet.png">
+
+      <p>Straight</p>
+
+      <img src="images/peach.png">
+
+      <p>Peach</p>
+
+        <img src="images/orange.png">
+
+      <p>Orange Cream</p>
+
+        <img src="images/cinnamon.png">
+
+      <p>Cinnamon</p>
+
+        <img src="images/sweet tea.png">
+
+      <p>Sweet Tea</p>
+
+    </div> <!--small col-->
+</div><!--small-grid-->
+
 </div>
 
 
