--- a/intro.html
+++ b/intro.html
@@ -23,9 +23,11 @@
 <body>
 
 <img class="intro-logo" src="images/logo1.png" alt="Duke's Moonshine Distillery">
-<h2 class="centered"> Wait a Second! Are You At Least 21 Years of Age?</h2>
-<p class="centered"> By clicking yes, you are agreeing that you are of legal age.</p>
 
+<div class="centered-intro">
+<h2> Wait a Second! <br>Are You At Least 21 Years of Age?</h2>
+<p> By clicking yes, you are agreeing that you are of legal age.</p>
+<br>
 <form id="yes-button" action="index.html">
     <input type="submit" value="Yes! Yee-haw!" />
 
@@ -33,6 +35,7 @@
 <form id="no-button" action="default.html">
     <input type="submit" value="Not yet! Dang-it!" />
 </form>
+</div>
 
 
 </body>
