--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="red-banner">
+<a href="https://charlotte-schepers.com/silver-seniors/"><p>DESIGNER NOTES | CLICK HERE TO SEE MY DESIGN PROCESS</p></a>
+</div>
+
   <!-- NAVIGATION BEGINS -->
     <nav class="navbar">
         <div class="logo-container">
