--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="red-banner">
-<a href="https://charlotte-schepers.com/silver-seniors/"><p>DESIGNER NOTES | CLICK HERE TO SEE MY DESIGN PROCESS</p></a>
+<a href="https://charlotte-schepers.com/dukes-moonshine-distillery/"><p>DESIGNER NOTES | CLICK HERE TO SEE MY DESIGN PROCESS</p></a>
 </div>
 
   <!-- NAVIGATION BEGINS -->
@@ -36,9 +36,6 @@
             </li>
             <li class="menu-item">
                 <a href="#contact">Contact</a>
-            </li>
-            <li class="menu-item">
-                <a href="https://charlotte-schepers.com/dukes-moonshine-distillery/">Designer Notes</a>
             </li>
         </ul>
         <div id="nav-toggle" class="menu-icon">
