--- a/index.html
+++ b/index.html
@@ -242,8 +242,9 @@ The company has expanded over the years with the help of a great team. What star
   </div>
   <div></div>
   <div class="right">
-    <a href= "mailto:info@dukesmoonshine.com"><b>Email</b>info@dukesmoonshine.com</a><br>
-    <a href="tel:+6062233478"><b>Phone</b>606.223.3478</a><br>
+    <a href= "mailto:info@dukesmoonshine.com"><b>Email<br></b>info@dukesmoonshine.com</a><br>
+    <a href="tel:+6062233478"><b>Phone<br></b>606.223.3478</a><br>
+    <br>
     <a href="#">Where to Buy</a><br>
     <a href="#">Drink Responsibly</a><br>
     <a href="#"><img src="images/arrow.png" alt="arrow"></a>
