--- a/index.html
+++ b/index.html
@@ -81,12 +81,14 @@ The company has expanded over the years with the help of a great team. What star
 </p>
 </div>
 
+<div class="products2"> </div>
+
 <div id="products" class="product-bkgd products">
 <img class="products-img" src="images/products.png" alt="moonshine jars">
 
 
-<h2>Get Your Hands On</h2>
-<p>HANDCRAFTED MOONSHINE</p>
+<h2>Get Your Hands On<br>
+  Handcrafted Moonshine</h2>
 </div>
 
 </div>
@@ -244,7 +246,6 @@ The company has expanded over the years with the help of a great team. What star
   <div class="right">
     <a href= "mailto:info@dukesmoonshine.com"><b>Email<br></b>info@dukesmoonshine.com</a><br>
     <a href="tel:+6062233478"><b>Phone<br></b>606.223.3478</a><br>
-    <br>
     <a href="#">Where to Buy</a><br>
     <a href="#">Drink Responsibly</a><br>
     <a href="#"><img src="images/arrow.png" alt="arrow"></a>
