--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Duke's Moonshine Distillery</title>
     <!-- import stylesheet -->
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="styles.css">
@@ -22,7 +22,7 @@
         </div>
         <ul id="nav-list" class="nav-menu">
             <li class="menu-item">
-                <a href="#home">Home</a>
+                <a href="#">Home</a>
             </li>
             <li class="menu-item">
                 <!-- <a href="http://" target="_blank" rel="noopener noreferrer">Blog</a> -->
@@ -66,10 +66,10 @@
 
 <div class="header-img"></div>
 
-
-<h2 id="about" >Our Story</h2>
+<span id="about"></span>
 
 <div class="about">
+    <h2>Our Story</h2>
 <p>Duke’s Moonshine Distillery today is definitely different than from when it first started out. Duke’s has always been a family company and is still run by the family today. Founder, Jesse Duke, first started making moonshine when it was illegal. He would be considered a criminal for making our award-winning moonshine back then. He hid his moonshine still in the barn on the Duke farm and narrowly evaded law enforcement several times. The police at the time, knew he was up to know good, but all Jesse wanted to do was make his moonshine!<br>
 <br>
 He even had his young nephews making bootleg deliveries for him throughout the town. Duke’s moonshine was sought after by every farmer in the county. It quickly became a whole family ordeal, having to produce enough moonshine for the whole town! It was not until much later, laws were created to protect moonshiners. After a grueling process and specifically mandated equipment, Duke’s was legally up and running.<br>
@@ -81,14 +81,14 @@ The company has expanded over the years with the help of a great team. What star
 </p>
 </div>
 
-<div class="products2"> </div>
+<span id="products"> </span>
 
-<div id="products" class="product-bkgd products">
-<img class="products-img" src="images/products.png" alt="moonshine jars">
+<div  class="product-bkgd products">
 
 
-<h2>Get Your Hands On<br>
-  Handcrafted Moonshine</h2>
+
+<!-- <h2>Get Your Hands On<br>
+  Handcrafted Moonshine</h2> -->
 </div>
 
 </div>
@@ -96,6 +96,7 @@ The company has expanded over the years with the help of a great team. What star
 
 <div class="blue-cover">
 <h2>Interested in More?</h2>
+<br>
 <p> We distill and create each and every Duke's jar at our Hazzard County distillery. We have a variety of flavors available to purchase in many stores. We often sell seasonal flavors, so keep an eye out!</p>
 
 <!-- <div class="row">
@@ -173,8 +174,9 @@ The company has expanded over the years with the help of a great team. What star
 
     </div> <!--small col-->
 </div><!--small-grid-->
-
+<img class="products-img" src="images/products.png" alt="moonshine jars">
 </div>
+
 
 
   <div id="contact" class="wrapper2">
