--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ The company has expanded over the years with the help of a great team. What star
 
 
 <div class="blue-cover">
-<h2>Interested in More?</h2>
+<h2>Our Products</h2>
 <br>
 <p> We distill and create each and every Duke's jar at our Hazzard County distillery. We have a variety of flavors available to purchase in many stores. We often sell seasonal flavors, so keep an eye out!</p>
 
